crates/flotilla-tui/tests/snapshots/snapshots__action_menu.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                   ┌ Actions ─────────────────────────────────────┐                                   │
│                                   │▸  1: Create workspace                        │                                   │
│                                   │   2: Open PR in browser                      │                                   │
│                                   │   3: Remove worktree                         │                                   │
│                                   │                                              │                                   │
│                                   │                                              │                                   │
│                                   │                                              │                                   │
│                                   │                                              │                                   │
│                                   │                                              │                                   │
│                                   │                                              │                                   │
│                                   │                                              │                                   │
│                                   └──────────────────────────────────────────────┘                                   │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
 j/k:navigate  enter:select  esc:close
