crates/flotilla-tui/tests/snapshots/snapshots__command_palette_open.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
assertion_line: 556
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
/                            <ENT> RUN  <ESC> CLOSE  <TAB> FILL                                   ◫ auto   @local
  repo       Manage repositories
  checkout   Manage checkouts
  cr         Code review
  pr         Code review
  issue      Issues
  agent      Cloud agents
  workspace  Workspaces
  host       Manage and route to hosts
