crates/flotilla-tui/tests/snapshots/snapshots__command_palette_selection.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
/                            <ENT> RUN  <TAB> FILL  <esc> CLOSE    ◫ auto   @local
  search     filter items in view                                                                                 /
  refresh    refresh active repo                                                                                  r
  branch     create a new branch                                                                                  n
  help       show key bindings                                                                                    ?
  quit       exit flotilla                                                                                        q
  layout     cycle view layout                                                                                    l
  host       cycle target host                                                                                    h
  theme      cycle color theme
