crates/flotilla-tui/tests/snapshots/snapshots__config_screen_cross_repo_worst_wins.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | alpha | beta | [+]
┌ Providers ───────────────────────────────────────────────────────────┐┌ Event Log ───────────────────────────── INFO ┐
│Role             Provider                 Status                      ││                                              │
│VCS              —                                                    ││                                              │
│Checkout mgr     —                                                    ││                                              │
│Change request   GitHub                   ✗                           ││                                              │
│Issue tracker    —                                                    ││                                              │
│Cloud agents     —                                                    ││                                              │
│AI utility       —                                                    ││                                              │
│Workspace mgr    —                                                    ││                                              │
│Terminal pool    —                                                    ││                                              │
│Environment      —                                                    ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘│                                              │
┌ Hosts ───────────────────────────────────────────────────────────────┐│                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
FLOTILLA                     <j> DOWN  <k> UP  <[> PREV  <]> NEXT  <q> QUIT 
