crates/flotilla-tui/tests/snapshots/snapshots__debug_panel_with_correlation_details.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││Description: Feature branch checkout          │
│      ── Checkouts ──                                                 ││Branch: feat-xyz                              │
│▸  ○                 f Feature br feat- ✓                             ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      │└──────────────────────────────────────────────┘
│                                                                      │┌ Debug (D to toggle) ─────────────────────────┐
│                                                                      ││Group #12                                     │
│                                                                      ││branch: feat-xyz                              │
│                                                                      ││checkout: /test/my-project/feat-xyz           │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
                             <ENT> OPEN  <.> MENU  </> SEARCH  <n> NEW  <?> HELP    ◫ auto  @local
