crates/flotilla-tui/tests/snapshots/snapshots__delete_confirm_safe_to_delete.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                       ┌ Remove Worktree ─────────────────────────────────────────────────────┐                       │
│                       │Branch: feat-cleanup                                                  │                       │
│                       │                                                                      │                       │
│                       │PR: MERGED                                                            │                       │
│                       │Merge commit: abc1234                                                 │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │✓ Safe to delete                                                      │                       │
│                       │                                                                      │                       │
│                       │y/Enter: confirm    n/Esc: cancel                                     │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       │                                                                      │                       │
│                       └──────────────────────────────────────────────────────────────────────┘                       │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
 y/enter:confirm  n/esc:cancel
